made amendments to id namings

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="slider">
             <div class="photo-holder">
                 <div class="photos">
-                    <img src="assets/images/BIG-SMALL.jpg" id="big-small-weaving" alt="#">
+                    <img src="assets/images/weaving.jpg" id="weaving" alt="#">
                 </div>
                 <p class="hairstyle-name">
                     Big-Small weaving
@@ -28,7 +28,7 @@
             </div>
             <div class="photo-holder">
                 <div class="photos">
-                    <img src="assets/images/GHANA.jpg" id="ghana-weaving" alt="#">
+                    <img src="assets/images/ghana-weaving.jpg" id="ghana-weaving" alt="#">
                 </div>
                 <p class="hairstyle-name">
                     Ghana Weaving
@@ -36,7 +36,7 @@
             </div>
             <div class="photo-holder">
                 <div class="photos">
-                    <img src="assets/images/NATURAL.jpg" id="stylist" alt="#">
+                    <img src="assets/images/glona.jpg" id="glona" alt="#">
                 </div>
                 <p class="hairstyle-name">
                     Natural/Weaver
@@ -44,7 +44,7 @@
             </div>
             <div class="photo-holder">
                 <div class="photos">
-                    <img src="assets/images/NUTLESS.jpg" id="nutless" alt="#">
+                    <img src="assets/images/knotless-braid.jpg" id="knotless" alt="#">
                 </div>
                 <p class="hairstyle-name">
                     Nutless bread
@@ -52,7 +52,7 @@
             </div>
             <div class="photo-holder">
                 <div class="photos">
-                    <img src="assets/images/CENTIPEDE.jpg" id="centipede" alt="#">
+                    <img src="assets/images/stitch-braid.jpg" id="stitch-braid" alt="#">
                 </div>
                 <p class="hairstyle-name">
                     Centipede
