--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <img src="assets/images/weaving.jpg" id="weaving" alt="#">
                 </div>
                 <p class="hairstyle-name">
-                    Big-Small weaving
+                    Weaving
                 </p>
             </div>
             <div class="photo-holder">
@@ -39,7 +39,7 @@
                     <img src="assets/images/glona.jpg" id="glona" alt="#">
                 </div>
                 <p class="hairstyle-name">
-                    Natural/Weaver
+                    Stylist
                 </p>
             </div>
             <div class="photo-holder">
@@ -47,7 +47,7 @@
                     <img src="assets/images/knotless-braid.jpg" id="knotless" alt="#">
                 </div>
                 <p class="hairstyle-name">
-                    Nutless bread
+                    Knotless bread
                 </p>
             </div>
             <div class="photo-holder">
@@ -55,15 +55,13 @@
                     <img src="assets/images/stitch-braid.jpg" id="stitch-braid" alt="#">
                 </div>
                 <p class="hairstyle-name">
-                    Centipede
+                    stitch-braid
                 </p>
             </div>
         </div>
         </div>
 
         <div id="display">
-            <!-- <button id="btn"></button> -->
-            <!-- <h1>DISPLAY</h1> -->
         </div>
     </div>
 
