--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <img src="assets/images/knotless-braid.jpg" id="knotless" alt="#">
                 </div>
                 <p class="hairstyle-name">
-                    Knotless bread
+                    Knotless braid
                 </p>
             </div>
             <div class="photo-holder">
