changed the javascript codes

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="slider">
             <div class="photo-holder">
                 <div class="photos">
-                    <img src="assets/images/weaving.jpg" id="weaving" alt="#">
+                    <img src="assets/images/Weaving.jpg" id="Weaving" class="hairImg" alt="#">
                 </div>
                 <p class="hairstyle-name">
                     Weaving
@@ -28,7 +28,7 @@
             </div>
             <div class="photo-holder">
                 <div class="photos">
-                    <img src="assets/images/ghana-weaving.jpg" id="ghana-weaving" alt="#">
+                    <img src="assets/images/ghanaWeaving.jpg" id="ghanaWeaving" class="hairImg" alt="#">
                 </div>
                 <p class="hairstyle-name">
                     Ghana Weaving
@@ -36,7 +36,7 @@
             </div>
             <div class="photo-holder">
                 <div class="photos">
-                    <img src="assets/images/glona.jpg" id="glona" alt="#">
+                    <img src="assets/images/glona.jpg" id="glona" class="hairImg" alt="#">
                 </div>
                 <p class="hairstyle-name">
                     Stylist
@@ -44,15 +44,15 @@
             </div>
             <div class="photo-holder">
                 <div class="photos">
-                    <img src="assets/images/knotless-braid.jpg" id="knotless" alt="#">
+                    <img src="assets/images/knotlessBraid.jpg" id="knotlessBraid" class="hairImg" alt="#">
                 </div>
                 <p class="hairstyle-name">
                     Knotless braid
                 </p>
             </div>
             <div class="photo-holder">
-                <div class="photos">
-                    <img src="assets/images/stitch-braid.jpg" id="stitch-braid" alt="#">
+                <div class="photos" title="a">
+                    <img src="assets/images/stitchBraid.jpg" id="stitchBraid" class="hairImg" alt="#">
                 </div>
                 <p class="hairstyle-name">
                     stitch-braid
