added a picture to test the javascript

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         </div>
 
         <div class="slider">
+
             <div class="photo-holder">
                 <div class="photos">
                     <img src="assets/images/Weaving.jpg" id="Weaving" class="hairImg" alt="#">
@@ -26,6 +27,7 @@
                     Weaving
                 </p>
             </div>
+
             <div class="photo-holder">
                 <div class="photos">
                     <img src="assets/images/ghanaWeaving.jpg" id="ghanaWeaving" class="hairImg" alt="#">
@@ -34,6 +36,7 @@
                     Ghana Weaving
                 </p>
             </div>
+
             <div class="photo-holder">
                 <div class="photos">
                     <img src="assets/images/glona.jpg" id="glona" class="hairImg" alt="#">
@@ -42,6 +45,7 @@
                     Stylist
                 </p>
             </div>
+
             <div class="photo-holder">
                 <div class="photos">
                     <img src="assets/images/knotlessBraid.jpg" id="knotlessBraid" class="hairImg" alt="#">
@@ -50,6 +54,7 @@
                     Knotless braid
                 </p>
             </div>
+
             <div class="photo-holder">
                 <div class="photos" title="a">
                     <img src="assets/images/stitchBraid.jpg" id="stitchBraid" class="hairImg" alt="#">
@@ -58,6 +63,16 @@
                     stitch-braid
                 </p>
             </div>
+
+            <div class="photo-holder">
+                <div class="photos" title="a">
+                    <img src="assets/images/dp.jpg" id="dp" class="hairImg" alt="#">
+                </div>
+                <p class="hairstyle-name">
+                    stitch-braid
+                </p>
+            </div>
+
         </div>
         </div>
 
