added codes on image name visibility

--- a/index.html
+++ b/index.html
@@ -21,62 +21,79 @@
 
             <div class="photo-holder">
                 <div class="photos">
-                    <img src="assets/images/Weaving.jpg" id="Weaving" class="hairImg" alt="#">
+                    <img src="assets/images/Weaving.jpg" id="Weaving.jpg" class="hairImg" alt="#">
                 </div>
-                <p class="hairstyle-name">
-                    Weaving
-                </p>
+                <p class="hairstyle-name"></p>
             </div>
 
             <div class="photo-holder">
                 <div class="photos">
-                    <img src="assets/images/ghanaWeaving.jpg" id="ghanaWeaving" class="hairImg" alt="#">
+                    <img src="assets/images/ghana_Weaving.jpg" id="ghana_Weaving.jpg" class="hairImg" alt="#">
                 </div>
-                <p class="hairstyle-name">
-                    Ghana Weaving
-                </p>
+                <p class="hairstyle-name"></p>
             </div>
 
             <div class="photo-holder">
                 <div class="photos">
-                    <img src="assets/images/glona.jpg" id="glona" class="hairImg" alt="#">
+                    <img src="assets/images/glona.jpg" id="glona.jpg" class="hairImg" alt="#">
                 </div>
-                <p class="hairstyle-name">
-                    Stylist
-                </p>
+                <p class="hairstyle-name"></p>
             </div>
 
             <div class="photo-holder">
                 <div class="photos">
-                    <img src="assets/images/knotlessBraid.jpg" id="knotlessBraid" class="hairImg" alt="#">
+                    <img src="assets/images/knotless_Braid.jpg" id="knotless_Braid.jpg" class="hairImg" alt="#">
                 </div>
-                <p class="hairstyle-name">
-                    Knotless braid
-                </p>
+                <p class="hairstyle-name"></p>
             </div>
 
             <div class="photo-holder">
-                <div class="photos" title="a">
-                    <img src="assets/images/stitchBraid.jpg" id="stitchBraid" class="hairImg" alt="#">
+                <div class="photos">
+                    <img src="assets/images/stitch_Braid.jpg" id="stitch_Braid.jpg" class="hairImg" alt="#">
                 </div>
-                <p class="hairstyle-name">
-                    stitch-braid
-                </p>
+                <p class="hairstyle-name"></p>
             </div>
 
             <div class="photo-holder">
-                <div class="photos" title="a">
-                    <img src="assets/images/dp.jpg" id="dp" class="hairImg" alt="#">
+                <div class="photos">
+                    <img src="assets/images/smile.jpg" id="smile.jpg" class="hairImg" alt="#">
                 </div>
-                <p class="hairstyle-name">
-                    stitch-braid
-                </p>
+                <p  class="hairstyle-name"></p>
             </div>
+
+            <div class="photo-holder">
+                <div class="photos">
+                    <img src="assets/images/passport.jpg" id="passport.jpg" class="hairImg" alt="#">
+                </div>
+                <p  class="hairstyle-name"></p>
+            </div>
+
+            <div class="photo-holder">
+                <div class="photos">
+                    <img src="assets/images/lylian.png" id="lylian.png" class="hairImg" alt="#">
+                </div>
+                <p  class="hairstyle-name"></p>
+            </div>
+
+            <div class="photo-holder">
+                <div class="photos">
+                    <img src="assets/images/dp.jpeg" id="dp.jpeg" class="hairImg" alt="#">
+                </div>
+                <p  class="hairstyle-name"></p>
+            </div>
+
+            <div class="photo-holder">
+                <div class="photos">
+                    <img src="assets/images/church-girl.png" id="church-girl.png" class="hairImg" alt="#">
+                </div>
+                <p  class="hairstyle-name"></p>
+            </div>
+
 
         </div>
         </div>
 
-        <div id="display">
+        <div id="display"> <h1 class="h1"></h1>
         </div>
     </div>
 
